# ComfyUI_parakeet-tdt

./: README-CN.md  README.md  __init__.py  parakeet_node.py  pyproject.toml  requirements.txt
workflow-examples/: Dia-parakeet.json  kokoro-parakeet.json
